[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyquantumkit"
version = "0.1.5"
description = "A middleware for translating a quantum program into different quantum software stacks."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Peixun Long", email = "longpx@ihep.ac.cn"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["quantum"]
dependencies = [
    "numpy>=1.22.0",
    "sympy>=1.8",
]
requires-python = ">=3.8"

[tool.setuptools]
license-files = []

[project.urls]
Homepage = "https://quantum.ihep.ac.cn/"
Repository = "https://github.com/hiquarc/PyQuantumKit"
Documentation = "https://github.com/hiquarc/PyQuantumKit"

[tool.setuptools.packages.find]
include = ["pyquantumkit*"]
